# test_template_explicit_instantiation

./: CMakeLists.txt  bar-inl.h  bar.cpp  bar.h  foo-inl.h  foo.cpp  foo.h  foo_extend.cpp  foo_extend.h  foo_hack.cpp  foo_hack.h  main.cpp  zot.cpp  zot.h
.github/workflows/: ci.yml
